@@ -1,5 +1,8 @@
 Changes for APR 1.3.0
 
+  *) Fix error handling where apr_uid_* and apr_gid_* could return
+     APR_SUCCESS in failure cases.  [Joe Orton]
+
   *) Fix apr_file_gets() and apr_file_read() to catch write failures
      when flushing pending writes for a buffered file.  [Joe Orton]
 
